refactored group selection for test data generation

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -12,11 +12,19 @@
                         <div class="row mb-3">
                             <div class="col-12 col-sm-6">
                                 <div class="mb-3">
-                                    <label for="numberOfGroups" class="form-label" th:text="#{testdata.numberOfGroups}"></label><br/>
-                                    <input id="numberOfGroups" type="text" th:field="*{numberOfGroups}" class="form-control" required max="12" />
-                                    <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfGroups')}" th:errors="*{numberOfGroups}"></p>
+                                    <label for="groupSelection" class="form-label" th:text="#{testdata.numberOfGroups}"></label><br/>
+                                    <select id="groupSelection" th:field="*{groupSelection}" class="form-select">
+                                        <option th:each="groupSelection : ${testDataCommand.groupSelections}" th:value="${groupSelection}" th:text="#{${groupSelection.msgKey}}"></option>
+                                    </select>
                                 </div>
                             </div>
+<!--                            <div class="col-12 col-sm-6">-->
+<!--                                <div class="mb-3">-->
+<!--                                    <label for="numberOfGroups" class="form-label" th:text="#{testdata.numberOfGroups}"></label><br/>-->
+<!--                                    <input id="numberOfGroups" type="text" th:field="*{numberOfGroups}" class="form-control" required max="12" />-->
+<!--                                    <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfGroups')}" th:errors="*{numberOfGroups}"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="row">
                                 <div class="col-12 col-sm-8">
                                     <div class="form-check mb-3">
