create game of 3rd selection in data creation

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -21,6 +21,14 @@
                             <div class="row">
                                 <div class="col-12 col-sm-8">
                                     <div class="form-check mb-3">
+                                        <input id="createGameOfThird" type="checkbox" th:field="*{createGameOfThird}" class="form-check-input"/>
+                                        <label for="createGameOfThird" class="form-check-label" th:text="#{testdata.createGameOfThird}"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12 col-sm-8">
+                                    <div class="form-check mb-3">
                                         <input id="includeBets" type="checkbox" th:field="*{includeBets}" class="form-check-input"/>
                                         <label for="includeBets" class="form-check-label" th:text="#{testdata.includeBets}"></label>
                                     </div>
