added statistic for round of thirty two

--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -44,7 +44,8 @@
 									<thead>
 										<tr class="active">
 											<th><i class="fas fa-users" aria-hidden="true"></i></th>
-											<th>1/8</th>
+                                            <th>1/16</th>
+                                            <th>1/8</th>
 											<th>1/4</th>
 											<th>1/2</th>
 											<th>1/1</th>
@@ -57,6 +58,7 @@
 												<span th:text="${statistic.pointsGroup}"></span>
 												<span th:if="${statistic.maxGroupPointsCandidate}" class="fas fa-star" aria-hidden="true"></span>
 											</td>
+                                            <td class="warning" th:text="${statistic.pointsRoundOfThirtyTwo}"></td>
 											<td class="warning" th:text="${statistic.pointsRoundOfSixteen}"></td>
 											<td class="warning" th:text="${statistic.pointsQuarterFinal}"></td>
 											<td class="warning" th:text="${statistic.pointsSemiFinal}"></td>
