hide game of third if not available

--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -49,7 +49,7 @@
 											<th>1/4</th>
 											<th>1/2</th>
 											<th>1/1</th>
-											<th>3.</th>
+											<th th:if="${@groupAvailabilityUtil.isGroupAvailable('GAME_FOR_THIRD')}">3.</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -63,7 +63,7 @@
 											<td class="warning" th:text="${statistic.pointsQuarterFinal}"></td>
 											<td class="warning" th:text="${statistic.pointsSemiFinal}"></td>
 											<td class="warning" th:text="${statistic.pointsFinal}"></td>
-											<td class="info" th:text="${statistic.pointsGameForThird}"></td>
+											<td th:if="${@groupAvailabilityUtil.isGroupAvailable('GAME_FOR_THIRD')}" class="info" th:text="${statistic.pointsGameForThird}"></td>
 										</tr>
 									</tbody>
 						   		</table>
