--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -236,6 +236,9 @@
                                     <a class="dropdown-item" th:href="@{/profile/changeUsername}" th:text="#{navigation.changeUsername}"></a>
                                 </li>
                                 <li>
+                                    <a class="dropdown-item" th:href="@{/user/setting}" th:text="#{user.setting.title}"></a>
+                                </li>
+                                <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li>
