selecting bootswatch theme per user

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/brands.min.css}" />
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}" />
-        <link rel="stylesheet" th:href="${@runtimeSettingsUtil.getSettings().getBootswatchThemeUrl()}" />
+        <link rel="stylesheet" th:href="${@webSecurityUtil.getBootswatchThemeUrl()}" />
         <link rel="stylesheet" th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css}" />
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
         <link rel="stylesheet" th:href="@{/flag-icons-7.2.3/css/flag-icons.min.css}" />
