selecting bootswatch theme per user

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -236,7 +236,7 @@
                                     <a class="dropdown-item" th:href="@{/profile/changeUsername}" th:text="#{navigation.changeUsername}"></a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" th:href="@{/user/setting}" th:text="#{user.setting.title}"></a>
+                                    <a class="dropdown-item" th:href="@{/setting}" th:text="#{user.setting.title}"></a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
