--- a/src/main/resources/templates/user/user_settings.html
+++ b/src/main/resources/templates/user/user_settings.html
@@ -6,7 +6,7 @@
 	<body>
 		<div layout:fragment="content">
             <h2 th:text="#{user.setting.title}">User Settings</h2>
-            <form id="userSettingForm" th:action="@{/user/setting}" th:object="${userSettingCommand}" action="#" method="post" role="form">
+            <form id="userSettingForm" th:action="@{/setting}" th:object="${userSettingCommand}" action="#" method="post" role="form">
                 <div class="row">
                     <div class="col-12 col-sm-8">
                         <div class="form-check mb-3">
