selecting bootswatch theme per user

--- a/src/main/resources/templates/user/user_settings.html
+++ b/src/main/resources/templates/user/user_settings.html
@@ -37,6 +37,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-8">
                         <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+                        <a href="#" th:href="@{/setting/default}" class="btn btn-light" role="button" th:text="#{button.default}">Default</a>
                     </div>
                 </div>
             </form>
