--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -43,8 +43,8 @@
 								<input type="text" th:field="*{teamNameTwo}" class="form-control" />
 							</div>
 						</div>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamNameOne')}" th:errors="*{teamNameOne}">teamNameOne error</p>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamNameTwo')}" th:errors="*{teamNameTwo}">teamNameTwo error</p>
+						<p class="alert alert-danger field-alert mt-3" th:if="${#fields.hasErrors('teamNameOne')}" th:errors="*{teamNameOne}">teamNameOne error</p>
+						<p class="alert alert-danger field-alert mt-3" th:if="${#fields.hasErrors('teamNameTwo')}" th:errors="*{teamNameTwo}">teamNameTwo error</p>
 					</div>
 					<div class="form-group mb-3">
 		                <label class="form-label" for="kickOffDate" th:text="#{matches.form.kickOff} + ':'"></label>
