--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
             <form class="form" th:action="@{/login}" method="post">
                 <div class="text-center mb-5">
                     <i th:if="${loginLogo == null}" class="fas fa-thumbs-up fa-8x logo-color"></i>
-                    <img th:if="${loginLogo != null}" th:src="${loginLogo}" class="img-fluid"/>
+                    <img th:if="${loginLogo != null}" th:src="${loginLogo}" class="img-fluid rounded-3"/>
                 </div>
 
                 <h1 class="h3 mb-3 fw-normal" th:text="'FredBet - ' + #{login.title.short}">Please sign in</h1>
