--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -53,7 +53,7 @@
 		            </div>
 					<div class="form-group mb-3">
 						<label class="form-label" for="stadium" th:text="#{matches.form.stadium} + ':'"></label>
-						<input id="stadium" type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. St. Denis, Paris" />
+						<input id="stadium" type="text" th:field="*{stadium}" class="form-control" placeholder="z.B. St. Denis, Paris" maxlength="20"/>
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('stadium')}" th:errors="*{stadium}">stadium error</p>
 					</div>
 					<div class="form-group mb-3">
